# bofire-converters

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  opti_to_domain.py  pyproject.toml  requirements.txt  setup.py  test_opti_to_domain.py
.github/: publish.yaml  test.yaml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
bofire_converters/: opti_to_domain.py
domainconverters/: opti_to_domain.py
test/: test_opti_to_domain.py  test_pyprojecttoml.py
