[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "node-and-date"
write_to = "./bofire_converters/version.py"

[tool.ruff]
ignore = [
    "E501",  # don't enforce for comments and docstrings
    "B017",  # required for tests
    "B027",  # required for optional _tell method
    "B028",
    "B904",
    "B905"
]
line-length = 88
select = ["B", "C", "E", "F", "W", "I"]

[tool.ruff.mccabe]
max-complexity = 18

[project]
name = "bofire_converters"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Development Status :: 1 - Planning",
        "Programming Language :: Python :: 3 :: Only",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers"]
dependencies = [
    "mopti>=0.10.10",
    "bofire>=0.0.12",
]

[project.urls]
Homepage = "https://github.com/experimental-design/bofire-converters"

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
]